--- a/style.css
+++ b/style.css
@@ -21,14 +21,24 @@ body ul {
 
 #right {
     margin-right: 0px;
-    margin-bottom: 7%;
+    margin-bottom: 50%;
     float: right;
 }
 
 #left {
     margin-left: 0;
-    margin-bottom: 7%;
+    margin-bottom: 50%;
     float: left;
+}
+
+.pic {
+    border: solid 1px black;
+    background: white;
+    text-align:center;
+    width: 300px;
+    padding: 20px;
+    margin-top: 10px;
+    margin-bottom: 20px;
 }
 
 #menu {
