--- a/style.css
+++ b/style.css
@@ -9,9 +9,11 @@ body {
     display: inline-block;
 }
 
-#cent {
+#centerDiv {
     text-align: center;
-    padding: 5px;
+    width: 100%;
+    padding-top: 15%;
+    padding-bottom: 12%;
 }
 
 body ul {
@@ -93,28 +95,24 @@ footer {
     text-align: left;
 }
 
-#resul {
-    text-align: left;
-    margin-left: 0;
-    border-bottom: 1px solid black;
-}
-
 h1 {
     text-align: center;
     font-family: "Courier New";
 }
 
 h2 {
-    text-align: center;
+    text-align: left;
     margin-left: 15px;
     font-family: "Courier New";
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid lawngreen;
     padding-bottom: 5px;
 }
 
 h3 {
     text-align: left;
+    margin-left: 15px;
     font-family: "Courier New";
 }
+
 
 
